Fixing some of my goofups

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <a href="https://music.apple.com/us/artist/red-weather/1499670090" target="_blank"><img src="img/icons/applemusic.png" alt="Red Weather on Apple Music"></a>
         </div>
         <div class="music-video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/JVl23W15SKk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/PDWtcZz4wIQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="music-player">
             <iframe src="https://bandcamp.com/EmbeddedPlayer/album=1768569331/size=large/bgcol=333333/linkcol=9a64ff/artwork=small/transparent=true/" seamless><a href="https://redweather.bandcamp.com/album/wish-you-well">Wish You Well by Red Weather</a></iframe>
@@ -94,7 +94,7 @@
                     <br><p class="font-gimlet-reg">Established in 2018 against the backdrop of Virginia Beach, Red Weather stands as a cornerstone of the Emo and Pop-Punk genres. The band is comprised of Tim Ilardi (vocals/bass), Brian Bassette (drums), Chris Cornell (guitar/vocals), and Ethan McQuade (guitar).</p>
                     <br><p class="font-gimlet-reg">Building on the success of their debut EP "Empty Places" (2020) and the emotive journey of their debut full-length "Wish You Well" (2021), Red Weather entered 2023 with purpose. They unveiled three singles, showcasing a continued commitment to exploring the intricate nuances of their sound.</p>
                     <br><p class="font-gimlet-reg">These releases set the stage for the band's inaugural two tours in 2023, a testament to their growing influence, and ultimately the release of their EP “All We Have Is Time,” which was produced by Will Beasley (Turnstile, Asking Alexandria, The Dangerous Summer) and mastered by Paul Leavitt (All Time Low, Yellowcard, The Used).</p>
-                    <br><p class="font-gimlet-reg"><br><p class="font-gimlet-reg">Having shared stages with esteemed acts such as Trophy Eyes, Valleyheart, Mae, and Every Avenue, Red Weather's journey goes beyond mere musical exploration. With a dedication to their art and a respect for the gravity of Emo and Pop-Punk, the band is poised for a continued impact, both locally and beyond the shores of Virginia Beach.</p></p>
+                    <br><p class="font-gimlet-reg">Having shared stages with esteemed acts such as Trophy Eyes, Valleyheart, Mae, and Every Avenue, Red Weather's journey goes beyond mere musical exploration. With a dedication to their art and a respect for the gravity of Emo and Pop-Punk, the band is poised for a continued impact, both locally and beyond the shores of Virginia Beach.</p></p>
                 </div>
                 <div class="sponsors">
                     <p class="sponsor-title font-gimlet-cond-bold">SPONSORED BY</p>
