--- a/shows.html
+++ b/shows.html
@@ -46,9 +46,9 @@
         <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=unK-NhqlM90&list=OLAK5uy_kHaP_Q356RdZex3T4pesZrSwYspUg14e0" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">"ALL WE HAVE IS TIME" STREAMING EVERYWHERE!</p></a>
     </div>
 
-    <div class="hero">
+    <div class="shows-banner">
         <div class="banner" style=""> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
-            <a class="banner-text-anchor font-bodega-black" href="https://www.youtube.com/watch?v=unK-NhqlM90&list=OLAK5uy_kHaP_Q356RdZex3T4pesZrSwYspUg14e0" target="_blank" id="banner-text" class="banner-text font-bodega-black">"ALL WE HAVE IS TIME" STREAMING EVERYWHERE!</p></a>
+            <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=unK-NhqlM90&list=OLAK5uy_kHaP_Q356RdZex3T4pesZrSwYspUg14e0" target="_blank" id="banner-text" class="banner-text font-bodega-black">"ALL WE HAVE IS TIME" STREAMING EVERYWHERE!</p></a>
         </div>
     </div>
 
