More bonehead mistakes

--- a/presskit.html
+++ b/presskit.html
@@ -48,7 +48,7 @@
             <h2 class="font-bodega-black">Press Kit</h2>
             <img class="press-header-photo" src="img/hero-photo.webp" alt="Photo of Red Weather band members on a couch">
             <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/TGW0X144n_E?si=uCCUe091QqJIyOWR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=AEe7ODSyfzBN_pUW&amp;list=OLAK5uy_kHaP_Q356RdZex3T4pesZrSwYspUg14e0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div class="press-header-quotes">
                 <li class="quote">
@@ -120,8 +120,8 @@
         <div class="press-videos press-width">
             <h2 class="font-bodega-black">Videos</h2>
             <div class="all-press-videos">
-                <div class="video-container"></div>
-                    <iframe src="https://www.youtube.com/embed/PDWtcZz4wIQ?si=_BRMn62AhPRQHIj_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="video-container">
+                    <iframe src="https://www.youtube.com/embed/PDWtcZz4wIQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="video-container">
                     <iframe src="https://www.youtube.com/embed/A1a1gFn1Kw0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
