--- a/shows.html
+++ b/shows.html
@@ -106,13 +106,13 @@
                 <img class="show-flyer press-header-photo" src="img/shows/24-09-26.jpg" alt="Red Weather Show Flyer July 3, 2024">
             </div>
             <div class="past-show-img">
-                <img class="show-flyer press-header-photo" src="img/shows/24-08-12.JPG" alt="Red Weather Show Flyer August 12, 2024">
+                <img class="show-flyer press-header-photo" src="img/shows/24-08-12.jpg" alt="Red Weather Show Flyer August 12, 2024">
             </div>
             <div class="past-show-img">
-                <img class="show-flyer press-header-photo" src="img/shows/24-07-17.JPG" alt="Red Weather Show Flyer July 17, 2024">
+                <img class="show-flyer press-header-photo" src="img/shows/24-07-17.jpg" alt="Red Weather Show Flyer July 17, 2024">
             </div>
             <div class="past-show-img">
-                <img class="show-flyer press-header-photo" src="img/shows/24-07-16.JPG" alt="Red Weather Show Flyer July 16, 2024">
+                <img class="show-flyer press-header-photo" src="img/shows/24-07-16.jpg" alt="Red Weather Show Flyer July 16, 2024">
             </div>
             <div class="past-show-img">
                 <img class="show-flyer press-header-photo" src="img/shows/24-07-03.JPG" alt="Red Weather Show Flyer July 3, 2024">
