--- a/shows.html
+++ b/shows.html
@@ -96,13 +96,13 @@
     <div id="past-shows" class="shows-wrapper">
         <h2 class="shows-title font-bodega-black">PAST SHOWS</h2>
         <div class="past-shows-internal-wrapper">
-            <div class="past-show-img"></div>
+            <div class="past-show-img">
                 <img class="show-flyer press-header-photo" src="img/shows/25-01-24.jpg" alt="Red Weather Show Flyer January 24, 2025">
             </div>
             <div class="past-show-img">
                 <img class="show-flyer press-header-photo" src="img/shows/24-09-28.jpg" alt="Red Weather Show Flyer September 28, 2024">
             </div>
-            <div class="past-show-img"></div>
+            <div class="past-show-img">
                 <img class="show-flyer press-header-photo" src="img/shows/24-09-26.jpg" alt="Red Weather Show Flyer July 3, 2024">
             </div>
             <div class="past-show-img">
